# oodkit

./: .gitignore  LICENSE  OBJECT_DETECTION_PLAN.md  README.md  README_DEV.md  REPO_GUIDE.md  docker-compose.yml  jupyter.sh  pyproject.toml  run.sh  test.sh
docker/: Dockerfile
notebooks/: README.md  coco_ood_showcase.ipynb  coco_ood_showcase.py  imagenet_ood_showcase.ipynb  imagenet_ood_showcase.py
notebooks/detection_failure/: bdd100k_detection_failure_prediction.ipynb  coco_detection_failure_prediction.ipynb
notebooks/detector_demos/: bdd100k_ood_showcase.ipynb  coco_ood_showcase.py  imagenet_ood_showcase.py
notebooks/experimental/: coco_global_chip_fusion.ipynb
notebooks/outputs/bdd100k_embedder_checkpoint/: head.pt  meta.json
oodkit/: __init__.py  types.py
oodkit/data/: __init__.py  features.py
oodkit/detectors/: __init__.py  base.py  vim.py
oodkit/utils/: __init__.py  linalg.py
src/oodkit/: MVP_TODO.md  __init__.py  auditing.py  failure.py  types.py
src/oodkit/contrib/: __init__.py
src/oodkit/contrib/coco/: __init__.py  category_table.py  dataset.py  discovery.py  loader.py
src/oodkit/contrib/imagenet/: __init__.py  dataset.py  synset_table.py
src/oodkit/data/: __init__.py  chip_dataset.py  chips.py  features.py
src/oodkit/detection/: __init__.py  inference.py  tables.py
src/oodkit/detectors/: __init__.py  base.py  energy.py  knn.py  mahalanobis.py  msp.py  pca.py  pca_common.py  pca_fusion.py  vim.py  wdiscood.py
src/oodkit/embeddings/: __init__.py  _guard.py  backbones.py  datasets.py  embedder.py  result.py  storage.py  training.py
src/oodkit/evaluation/: __init__.py  combine.py  compare.py  geometry_pooling.py  metrics.py  performance.py  plots.py  pooling.py  score_bank.py
src/oodkit/utils/: __init__.py  array.py  linalg.py
tests/: conftest.py
tests/pkg/: __init__.py  test_auditing.py
tests/pkg/contrib/coco/: test_category_table.py  test_coco_dataset.py  test_discovery.py  test_loader.py
tests/pkg/contrib/imagenet/: test_dataset.py  test_synset_table.py
tests/pkg/data/: test_chip_dataset.py  test_chips.py  test_features.py
tests/pkg/detection/: test_tables.py
tests/pkg/detectors/: conftest.py  test_base.py  test_energy.py  test_knn.py  test_mahalanobis.py  test_msp.py  test_pca.py  test_pca_fusion.py  test_vim.py  test_wdiscood.py
tests/pkg/embeddings/: test_embedder.py  test_guard.py  test_result.py  test_storage.py
tests/pkg/evaluation/: test_combine.py  test_compare.py  test_geometry_pooling.py  test_metrics.py  test_performance.py  test_plots.py  test_pooling.py  test_score_bank.py
tests/pkg/failure/: test_failure.py
tests/pkg/utils/: test_array.py
