[project]
name = "oodkit"
version = "0.1.0"
description = "OOD detection toolkit"
authors = [{name="Joseph Egan"}]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipython",
    "jupyterlab",
    "ipywidgets",
    "matplotlib",
]

ml = [
    "scikit-learn",
    "torch",
    "torchvision",
    "transformers",
    "pandas",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]